fixed minor spacing

--- a/client/src/component/styles/form.css
+++ b/client/src/component/styles/form.css
@@ -28,7 +28,7 @@
 #register-link > button { height: 40px; font-size: 14px; color: white; background: green; }
 
 #register-label {
-    margin-top: 50px;
+    margin-top: 100px;
     width: 60%;
     font-family: fantasy;
     font-size: 36px;
